$Id: ChangeLog,v 1.16 2004/03/20 14:30:55 h_oudejans Exp $

2004-03-19 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added audiocontrolspage
	* fixed volume (voor devices containing a space)
	* fixed compile error in linux

2004-03-06 Maarten ter Huurne <maarten@treewalker.org>
	* Moved build files to a subdir named "build".
	* Define RESOURCEDIR from within build process.
	  For the time being, developers should edit "build/config.mk" and set
	  INSTALL_BASE to "<catapult_dir>/derived".

2004-03-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* adapted for openmsx cvs Changelog version 1.1156 (openmsx_info 
	  command output is now a tcl-list).

2004-02-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed a sync error when querying the settings

2004-02-12 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When RESOURCEDIR is defined, catapult will use this as the 
	  basedirectory for the resources.
	* Suppressed output when launching openMSX in hidden mode
	* When used with openMSX 0.3.4 release, catapult will now filter
	  excessive information from the set command reply if set is used 
	  to query the current value.

2004-02-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Make renderers and scalers dynamicly
	* Catapult now asks all needed settings from openMSX

2004-02-07 Maarten ter Huurne <maarten@treewalker.org>
	* Integrated dependency checking from openMSX alternative.mk.
	* Fixed compile warnings that showed up at "-Wall".

2004-02-06 Manuel Bilderbeek <manuel@msxnet.org>
	* added version variable in Makefile (maybe add config.h?)
	* more .cvsignore entries

2004-02-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* machines and extensions are refreshed after the
	  configuration dialog has been called
	* added program icon
	* removed unicode from xml parser
	* replaced diskimage.bmp
	* moved version number to config.h

2004-02-05 Wouter Vermaelen <wouter.vermaelen@pi.be>
	* handle unknown XML tags better

2004-02-05 Herman Oudejans <hn.oudejans@quicknet.nl>